# hiptext

./: .gitignore  CMakeLists.txt  artiste.cc  artiste.h  hiptext.cc  png.cc
cmake/: FindFFMPEG.cmake  FindGflags.cmake  build_config.cmake
